# signal-protocol

./: Cargo.toml  MANIFEST.in  README.md  build-wheels.sh  requirements.txt  setup.py
.circleci/: config.yml
hello_world/: Cargo.toml
script/: check-rust-version.py
signal_protocol/: __init__.py
src/: address.rs  curve.rs  error.rs  fingerprint.rs  group_cipher.rs  identity_key.rs  lib.rs  protocol.rs  ratchet.rs  sealed_sender.rs  sender_keys.rs  session.rs  session_cipher.rs  state.rs  storage.rs
tests/: test_address.py  test_curve.py  test_example.py  test_fingerprint.py  test_group_cipher.py  test_identity_key.py  test_keygen.py  test_protocol.py  test_ratchet.py  test_sealed_sender.py  test_session.py  test_state.py
tests/curve/: test_curve.py  test_curve25519.py
tests/utils/: protocol.py  sessions.py
