[package]
name = "signal-protocol"
version = "0.2.1"
authors = ["jen <jen@freedom.press>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
rand = "0.7.3"
libsignal-protocol-rust = { git = "https://github.com/freedomofpress/libsignal-client", rev="643a637b3444b12b0f6e8b57776494235614a330" }
pyo3 = { version = "0.12.4", features = ["extension-module"] }
futures = "0.3.7"

[lib]
name = "signal_protocol"
crate-type = ["cdylib"]
